--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,8 @@
-body {
+body, html {
   margin: 0;
   padding: 0;
+  height: 100%;
+  background-color: #f0f0f0; /* Set your desired background color */
 }
 
 .section {
@@ -18,8 +20,17 @@ body {
   height: 100vh; /* Set height to full viewport height */
 }
 
-#about-section {
+#about-section, #the-area, #contact {
   padding: 50px 0;
+  /*height: 100vh; /* 100% of the viewport height */
+}
+
+.full-height-section {
+  position: relative;
+  display: flex;
+  justify-content: center;
+
+  padding: 20px;
 }
 
 .about-img {
